--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,8 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Nunito:ital,wght@0,200;0,300;0,400;0,700;0,800;1,200;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <style> @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Nunito:ital,wght@0,200;0,300;0,400;0,700;0,800;1,200;1,300;1,400;1,700&display=swap'); </style>
+    <script src="https://kit.fontawesome.com/853119d1d9.js" crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/230a210334.js"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
